<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"

    tools:context="com.monsh.seriemaclaurin.MainActivity">

    <!--Titulo -->
    <TextView
        android:id="@+id/txtTitulo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:padding="@dimen/small"
        android:text="@string/titulo"
        android:textColor="@color/colorTSec"
        android:textSize="@dimen/xlarge" />


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@id/txtTitulo"
        android:orientation="vertical"
        android:weightSum="10">

        <!-- Panel Captura -->
        <LinearLayout
            android:id="@+id/lytText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="2"
            android:gravity="center_horizontal"
            android:orientation="horizontal">


            <EditText
                android:id="@+id/edtValN"
                style="@style/EditText"
                android:inputType="number"
                android:textColorHint="@color/colorAccent"
                android:gravity="center_horizontal"
                android:layout_marginLeft="16dp"
                android:layout_marginRight="16dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/valueN"
                />

        </LinearLayout>

        <!-- Panel Botones -->
        <LinearLayout
            android:id="@+id/lytBtn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/lytText"
            android:layout_marginTop="16dp"
            android:layout_weight="3.3"
            android:gravity="center_horizontal"
            android:orientation="horizontal">

            <Button
                android:id="@+id/btnSen"
                style="@style/ButtonApp"
                android:onClick="calcSen"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginRight="10dp"
                android:text="@string/btnSeno" />

            <Button
                android:id="@+id/btnCos"
                android:onClick="calcCos"
                style="@style/ButtonApp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginRight="10dp"
                android:text="@string/btnCos" />

            <Button
                android:id="@+id/btnE"
                style="@style/ButtonApp"
                android:onClick="calcE"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/btnE" />

        </LinearLayout>

        <!-- Divider -->
        <View android:layout_height="1dp"
            android:background="@color/colorDiv"
            android:layout_width="match_parent">

        </View>

        <!-- Panel Val Aprox -->
        <LinearLayout
            android:id="@+id/lytVa"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/lytBtn"
            android:layout_marginTop="16dp"
            android:layout_weight="1.5"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingLeft="16dp"
                android:textColor="@color/colorTSec"
                android:text="@string/lblValSerie"
                android:textSize="@dimen/large" />

            <TextView
                android:id="@+id/tvVA"
                android:textColor="@color/colorTSec"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingLeft="@dimen/large"
                android:text="@string/valueAppSerie"
                android:textSize="@dimen/large" />
        </LinearLayout>

        <!-- Panel Errores -->
        <LinearLayout
            android:id="@+id/lytLbl"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/lytVa"
            android:layout_marginTop="10dp"
            android:layout_weight="1.5"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingLeft="16dp"
                android:textColor="@color/colorTSec"
                android:text="@string/lblEA"
                android:textSize="@dimen/large" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/colorTSec"
                android:paddingLeft="6dp"
                android:text="@string/lblER"
                android:textSize="@dimen/large" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingLeft="6dp"
                android:textColor="@color/colorTSec"
                android:text="@string/lblERP"
                android:textSize="@dimen/large" />
        </LinearLayout>

        <!-- Panel Resultado Errores -->
        <LinearLayout
            android:id="@+id/lytVal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/lytLbl"
            android:layout_marginTop="10dp"
            android:layout_weight="1.5"
            android:orientation="horizontal"
            android:weightSum="1">

            <TextView
                android:id="@+id/tvEA"
                android:textColor="@color/colorTSec"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight=".34"
                android:paddingLeft="16dp"
                android:text="@string/valueEA"
                android:textSize="@dimen/large" />

            <TextView
                android:id="@+id/tvER"
                android:textColor="@color/colorTSec"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight=".33"
                android:text="@string/valueER"
                android:textSize="@dimen/large" />

            <TextView
                android:id="@+id/tvERP"
                android:textColor="@color/colorTSec"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight=".33"
                android:text="@string/valueERP"
                android:textSize="@dimen/large" />
        </LinearLayout>

    </LinearLayout>

</RelativeLayout>
